# orientalmotor_ros

./: .gitignore  CMakeLists.txt  README.md  READNE.md  melodic.rosinstall  package.xml  setup.py
cfg/: modbus_motor.cfg  motor.cfg
dmk_high_speed_cam_ros/: CMakeLists.txt  README.md  package.xml
dmk_high_speed_cam_ros/launch/: high_speed_cam.launch
dmk_high_speed_cam_ros/scripts/: tis_rosstarter  tiscamera.py
launch/: motor_reconfigure.launch
msg/: motor.msg
nodes/: serial_node.py
orientalmotor_ros/: README.md  package.xml
orientalmotor_ros/launch/: motor_reconfigure.launch
orientalmotor_ros/nodes/: serial_node.py
orientalmotor_ros/orientalmotor_ros/: MotorReconfigure.py  __init__.py
orientalmotor_ros/src/orientalmotor_ros/: MotorReconfigure.py
scripts/: modbus_motor_reconfigure.py  motor_reconfigure.py
src/orientalmotor_ros/: MotorReconfigure.py  MotorReconfigure2.py  __init__.py
